little change in enter your link to enter youtube link

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="container my-3">
-    <h2>Enter Your Link</h2>
+    <h2>Enter Youtube Link</h2>
     <form action="/fetch_comments" method="POST">
         <div class="mb-3">
             <label for="link" class="form-label">Paste Here</label>
